--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "module-alias": "^2.2.3",
+    "node-gyp": "^10.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router": "^5.3.4",
@@ -44,7 +45,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.71.1",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^10.1.1",
     "style-loader": "^1.3.0",
     "webpack": "^4.47.0",
     "webpack-cli": "^3.3.12"
@@ -56,6 +57,7 @@
     "@babel/preset-react": "^7.23.3",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -77,7 +79,6 @@
     "@middleware": "server/middleware",
     "@util": "server/util"
   },
-  "type": "module",
   "jest": {
     "testEnvironment": "jsdom"
   }
