--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "build": "webpack --mode=production",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "cypress:open": "cypress open",
+    "e2e": "cypress run"
   },
   "engines": {
     "node": ">=10.15"
@@ -59,6 +61,7 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
+    "cypress": "^13.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^2.0.22",
