--- a/.github/workflows/deployment_pipeline.yaml
+++ b/.github/workflows/deployment_pipeline.yaml
@@ -3,10 +3,10 @@ name: Deployment Pipeline
 on:
   push:
     branches:
-      main
+      - master
   pull_request:
     branches:
-      [main]
+      [master]
     types:
       [opened, synchronize]
 
