--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@testing-library/user-event": "^14.5.2",
     "babel-jest": "^29.7.0",
     "cypress": "^13.7.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-jest": "^27.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^2.0.22",
